# mcp-linker

./: .env.example  .gitignore  .gitmodules  .prettierignore  AI_COLLABORATION_README.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile  Dockerfile.win  LICENSE  README.ja-JP.md  README.md  README.zh-CN.md  bun.lockb  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  ci-dev.yml  ci-linux  ci-linux-arm.yml  ci-linux.yml  ci.yml  linux-release.yml  release.yml  tauri-ci-win.yml  tauri-release-win.yml  tauri-windows.yml
api/: .env.example  .gitignore  Dockerfile  README.md  data.py  docker-compose.yml  download_db.py  get_github_urls_from_db.py  github_star_spider.py  optimize_db.sh  pyproject.toml  render.yaml  requirements.txt  wait-for-db.sh
api/app/: main.py  utils.py
api/app/api/: __init__.py  _favs.py  cat.py  favorites.py  health.py  server_configs.py  user.py
api/app/api/servers/: __init__.py  common.py  create.py  detail.py  list.py  metrics.py  my.py  recommendations.py  ud.py
api/app/api/team/: __init__.py  member.py  team_config_routes.py  team_routes.py
api/app/core/: auth.py  cache.py  config.py  exceptions.py  middleware.py  prisma_config.py  prisma_utils.py
api/app/crud/: __init__.py  category.py  server_config.py  server_old.py  user.py
api/app/crud/server/: __init__.py  base.py  category.py  minimal.py  models.py  operations.py  recommendations.py  stats.py
api/app/schemas/: __init__.py  common.py  features.py  mcp_config.py  server.py  team.py  user.py
api/app/services/: team_service.py
api/import_server_data/: add_qualified_name.py  import_data_prisma.py  update_github_star.py  update_server_configs.py
api/migrations/: add_server_config_indexes.sql  add_server_indexes.sql  add_user_favorites_table.sql
api/prisma/: schema.prisma
api/tests/: test_categories.py  test_db.py  test_performance.py  test_redis.py
docs/: BADGES.md  CNAME  README.de.md  README.es.md  README.fr.md  README.ja-JP.md  README.zh-CN.md  README.zh-Han.md  ROADMAP.md  SCREENSHOTS.md  auth.html  callback.html  clients.md  early-access.md  index.html  login.html  pre-commit
public/: cats.json  configs.json  servers.json
readme/: DEVELOPMENT.md  MACOS-NOTICE.md  README.de.md  README.fr.md  README.zh-TW.md
scripts/: bump.ts  release.sh  update-submodule.sh
servers/example-mcp/: mcp.json
src/: App.css  App.tsx  i18n.ts  main.tsx  pages-map.ts  routes.tsx  schemas.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adapter.rs  app.rs  client.rs  cmd.rs  codex.rs  dxt.rs  encryption.rs  git.rs  installer.rs  json_manager.rs  lib.rs  main.rs  mcp_commands.rs  mcp_crud.rs  mcp_sync.rs  sleep.rs  window.rs
src-tauri/src/cmd/: json_commands.rs  mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/installer/: uv_installer.rs
src-tauri/src/json_manager/: file_io.rs  mod.rs  server_crud.rs  server_state.rs  utils.rs
src/components/: AppList.tsx  AppSelector.tsx  AuthDebug.tsx  AuthPromptDialog.tsx  CommandChecker.tsx  ContentArea.tsx  Dialog.tsx  ErrorBoundary.tsx  FolderSelect.tsx  LangSelect.tsx  Layout.tsx  McpManage.tsx  McpStore.tsx  PathSelector.tsx  ProtectedRoute.tsx  SearchInput.tsx  SelectClient.tsx  ServerCard.tsx  ServerConfigDialog.tsx  ServerForm.tsx  Sidebar.tsx  SortOptions.tsx  StoreInitializer.tsx  TriggerOnMount.tsx  UpdateChecker.tsx  UpdateDialog.tsx  UpdatesCard.tsx  banner.tsx  brand.tsx  categories.tsx  client-list.tsx  client-selector.tsx  data.ts  icons.tsx  nav.tsx  server-list.tsx
src/constants/: clients.ts
src/context/: SidebarContext.tsx
src/contexts/: McpRefreshContext.tsx  SidebarContext.tsx
src/hooks/: use-toast.ts  useAuth.ts  useAuthContext.tsx  useBatchActions.ts  useClaudeCodeManagement.ts  useCloudSync.ts  useDecryptedServers.ts  useDeepLink.ts  useDeepLinkAuth.ts  useEncryptedConfig.ts  useMcpConfig.ts  useMcpServers.ts  usePlatform.ts  useServerDiscovery.tsx  useTeam.ts  useTeamCloudSync.ts  useTeamTrial.ts  useTier.ts  useUnifiedDeepLink.ts
src/i18n/: index.ts  schema.ts
src/lib/: ClientContext.tsx  api.ts  apiClient.ts  axios.ts  axiosWithToken.ts  cloud-sync.ts  data.ts  servers.json  stores.ts  team-cloud-sync.ts  update.ts
src/pages/: About.tsx  AuthPage.tsx  ClaudeCodeManage.tsx  Dashboard.tsx  Discover.tsx  DxtDetail.tsx  InstallApp.tsx  OnBoarding.tsx  ServerPage.tsx  SettingsPage.tsx  TeamMemberPage.tsx  TeamPage.tsx  manage.tsx  recently.tsx
src/services/: auth.ts  teamService.ts
src/store/: clientPathStore.ts  favoritesStore.ts  index.ts  serverStore.ts
src/stores/: authStore.ts  ccProject.ts  clientPathStore.ts  configFileStore.ts  consentStore.ts  deepLinkStore.ts  favoriteServers.ts  globalDialogStore.ts  index.ts  statsStore.ts  tabStore.ts  useNoteStore.ts  useUpdateStore.ts  userStore.ts  viewStore.ts
src/types/: ServerType.ts  cat.ts  config.ts  fav.ts  i18n.d.ts  index.ts  team.ts
src/utils/: encryption.ts  errorUtils.ts  formater.ts  supabase.ts  title.ts  urlHelper.ts
src/views/: AuthPage.tsx  Dashboard.tsx  Discover.tsx  home.tsx  (+12 more)
tauri-app/: .dockerignore  .env.example  Dockerfile  Dockerfile.win  package.json  vite.config.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: adapter.rs  claude_code_commands.rs  claude_disabled.rs  client.rs  codex.rs  dxt.rs  env_path.rs  filesystem.rs  git.rs  installer.rs  json_manager_test.rs  lib.rs  main.rs  mcp_commands.rs  mcp_crud.rs  mcp_sync.rs
tauri-app/src-tauri/src/cmd/: chat.rs  json_commands.rs  mod.rs
tauri-app/src-tauri/src/config/: codex.rs  mcp.rs  mod.rs
tauri-app/src-tauri/src/installer/: uv_installer.rs
tauri-app/src-tauri/src/json_manager/: file_io.rs  mod.rs  server_state.rs
tauri-app/src-tauri/src/mcp_client/: chat.rs  error.rs  mod.rs  model.rs  tool.rs
tauri-app/src-tauri/src/mcp_client/client/: common.rs  llm.rs  mod.rs
(+334 files in other folders)
