[package]
name = "mcp-linker"
version = "1.5.4"
description = "Easily connect and manage MCP servers for Claude and other clients"
authors = ["milisp"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mcp_store_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
dirs = "6.0.0"
tauri-plugin-os = "2"
tauri-plugin-deep-link = "2"
tokio = { version = "1.45.1", features = ["process", "macros", "full"] }
url = "2.5.4"
anyhow = "1.0.98"
ring = "0.17.8"
base64 = "0.21.7"
chrono = { version = "0.4.41", features = ["serde", "clock"] }
tauri-plugin-clipboard-manager = "2"
log = "0.4.27"
glob = "0.3.1"
zip = "4.3.0"
reqwest = { version = "0.12.22", features = ["json"] }
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
rmcp = { version = "0.3", features = [
    "client",
    "transport-child-process",
    "transport-sse-client",
    "transport-streamable-http-client",
    "reqwest"
] }
once_cell = "1.21.3"
tiktoken-rs = "0.7.0"
pdf-extract = "0.7.12"
csv = "1.3"
calamine = "0.25"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3.8"
